--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -23,14 +23,14 @@ jobs:
         run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ env.DOCKERHUB_USERNAME }} --password-stdin || true
 
       - name: Pull latest${{ matrix.image.tag_ext }} Docker image for caching
-        run: docker pull rasa/financial-demo-app:latest || true
+        run: docker pull rasa/financial-demo:latest || true
 
       - name: Build latest${{ matrix.image.tag_ext }} Docker image
-        run: docker build . --tag rasa/financial-demo-app:latest --cache-from rasa/financial-demo-app:latest
+        run: docker build . --tag rasa/financial-demo:latest --cache-from rasa/financial-demo:latest
 
       - name: Push image with latest tag 📦
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: docker push rasa/financial-demo-app:latest
+        run: docker push rasa/financial-demo:latest
 
       - name: Push image with ${{github.ref}} tag 📦
         env:
@@ -38,6 +38,6 @@ jobs:
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
         run: |
           GITHUB_TAG=${GITHUB_TAG/refs\/tags\//}
-          docker tag rasa/financial-demo-app:latest rasa/financial-demo-app:${GITHUB_TAG}
-          docker push rasa/financial-demo-app:${GITHUB_TAG}
+          docker tag rasa/financial-demo:latest rasa/financial-demo:${GITHUB_TAG}
+          docker push rasa/financial-demo:${GITHUB_TAG}
           
