--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -3,8 +3,6 @@ on:
   push:
     branches:
     - master
-    tags:
-    - '*'
 
 jobs:
   docker:
@@ -19,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Login to DockerHub Registry 🔢
-        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ env.DOCKERHUB_USERNAME }} --password-stdin || true
+        run: echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ env.DOCKERHUB_USERNAME }} --password-stdin
 
       - name: Pull latest${{ matrix.image.tag_ext }} Docker image for caching
         run: docker pull rasa/financial-demo:latest || true
@@ -29,14 +27,4 @@ jobs:
 
       - name: Push image with latest tag 📦
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        run: docker push rasa/financial-demo:latest
-
-      - name: Push image with ${{github.ref}} tag 📦
-        env:
-          GITHUB_TAG: ${{ github.ref }}
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        run: |
-          GITHUB_TAG=${GITHUB_TAG/refs\/tags\//}
-          docker tag rasa/financial-demo:latest rasa/financial-demo:${GITHUB_TAG}
-          docker push rasa/financial-demo:${GITHUB_TAG}
-          
+        run: docker push rasa/financial-demo:latest         
