--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,6 @@
 language: en
 pipeline:
-  - name: ConveRTTokenizer
-  - name: ConveRTFeaturizer
+  - name: WhitespaceTokenizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
   - name: CountVectorsFeaturizer
