fix bug when person not extracted in transfer money form

--- a/config.yml
+++ b/config.yml
@@ -24,6 +24,7 @@ pipeline:
 
 policies:
 - name: FallbackPolicy
+  nlu_threshold: 0.75
 - name: AugmentedMemoizationPolicy
 - name: FormPolicy
 - name: MappingPolicy
