--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -78,6 +78,8 @@ jobs:
       run: |
           python -m pip install --upgrade "pip<20"
           pip install -r requirements-dev.txt
+          python -m spacy download en_core_web_md
+          python -m spacy link en_core_web_md en
     - name: Cross-validate NLU model
       id: cvnlu
       if: |
