--- a/domain.yml
+++ b/domain.yml
@@ -12,14 +12,23 @@ intents:
 - affirm
 - deny
 - thankyou
-- ask_transfer_charge
+- ask_transaction_charge
 - search_transactions:
     use_entities: []
 - check_balance
+- fuel_my_entity:
+    use_entities: []
 - check_earnings:
     use_entities: []
 entities:
 - amount-of-money
+- ixo_entity_id
+- ixo_entity
+- ixo_agent
+- ixo_wallet
+- currency
+- fee
+- token
 - payment_amount
 - credit_card
 - payment_date
@@ -28,6 +37,14 @@ entities:
 - PERSON
 - number
 slots:
+  ixo_amount
+    type: unfeaturized
+    initial_value: 100
+  ixo_transaction_fee
+    type: unfeaturized
+    initial_value: 10
+  ixo_currency_conversion
+    type: unfeaturized
   PERSON:
     type: unfeaturized
   account_balance:
@@ -38,6 +55,34 @@ slots:
   amount_transferred:
     type: unfeaturized
   confirm:
+    type: unfeaturized
+  to_wallet_address
+    type: unfeaturized
+  from_wallet_balance_pre
+    type: unfeaturized
+  from_wallet_balance_post
+    type: unfeaturized
+  entity_id
+   type: unfeaturized
+  agent_id
+   type: unfeaturized
+  transaction_fee
+   type: unfeaturized
+   initial_value: 10 
+  fee_id
+    type: unfeaturized
+  fee_amount
+    type: unfeaturized
+  fee_currency
+    type: unfeaturized
+  fee_type
+    type: unfeaturized
+  offer_description
+    type: unfeaturized
+    initial_value: 12-months standard hosting
+  fee_description
+    type: unfeaturized
+  file_id
     type: unfeaturized
   credit_card:
     type: unfeaturized
@@ -56,14 +101,56 @@ slots:
     type: unfeaturized
   time:
     type: unfeaturized
-  grain:
-    type: unfeaturized
   vendor_name:
     type: unfeaturized
   currency:
     type: unfeaturized
-    initial_value: "$"
+    initial_value: "IXO"
 responses:
+  utter_project_entity_id
+  - text: I understand that you would like to add IXO credits to fuel the fees for your project
+  utter_cell_entity_id
+  - text: I understand that you would like to add IXO credits to fuel the fees for your cell node
+  utter_currency
+  - text: The currency of this transaction is {currency}
+  utter_wallet_balance_pre
+  - text: Your current IXO Credits balance in this wallet is {from_wallet_balance_pre}
+  utter_wallet_balance_post
+  - text: The balance in your wallet after this transaction will be { from_wallet_balance_post}
+  utter_fee_type
+  - text: The fee type for this transacton is {fee_type}
+  utter_transaction_fee_ixo
+  - text: You will be charged a standard transaction fee of {ixo_transaction_fee} IXO credits (included in the transaction amount).
+  utter_fuel_credit_amount
+  - text: The suggested amount of credits to cover all fees is {ixo_amount} IXO
+  utter_fuel_credit_refund_policy
+  - text: You may choose to withdraw any remaining IXO credits at any point 
+  utter_ixo_currency_conversion
+  - text: The equivalent {currency} value of your credits will be approximately {ixo_currency_conversion}
+  utter_fee_description_freehosting
+  - text: If you add 1,000 or more IXO credits, you will get 12 months of standard data hosting included (fair use terms apply).
+  utter_ask_confirm_offer:
+    - text: 'Would you like to accept the offer of {offer_description}?'
+      buttons:
+      - title: Yes
+        payload: /affirm_offer
+      - title: No thanks
+        payload: /deny_offer
+  utter_ask_fuel_entity_form_from_wallet_address
+  - text: Sending IXO Credits from this wallet address (which you control)
+  utter_got_it
+  - text: Got it!
+  utter_ask_fuel_entity_form_to_wallet_address
+  - text: The wallet address to which the IXO credits will be sent
+  utter_ask_fuel_entity_form_ixo_amount
+  - text: Let's go ahead with adding {ixo_amount} IXO credits, or please enter a different amount
+  utter_ask_fuel_entity_form_confirm
+    - text: 'So let's confirm that we are sending {ixo_amount}. You will still have the opportunity to review your order before submitting the transaction'
+      buttons:
+      - title: Confirm
+        payload: /affirm
+      - title: Cancel
+        payload: /deny
   utter_ask_transfer_form_amount_of_money:
   - text: How much money do you want to transfer?
   utter_ask_transfer_form_PERSON:
@@ -76,6 +163,8 @@ responses:
   - text: You're welcome :)
   utter_transfer_complete:
   - text: 'Successfully transferred {currency}{amount_of_money} to {PERSON}'
+  utter_fuel_added:
+    - text: 'You have successfully fueled your {ixo_entity} with {ixo_amount}IXO credits to the value of {currency}{amount_of_money}.'
   utter_transfer_charge:
   - text: You are entitled to six transfers within a statement cycle before being
       charged. For subsequent transfers you will be charged 10 per transaction.
@@ -159,3 +248,4 @@ forms:
 - cc_payment_form
 - transfer_form
 - transact_search_form
+- fuel_entity_form
