--- a/domain.yml
+++ b/domain.yml
@@ -2,28 +2,22 @@ session_config:
   session_expiration_time: 0.0
   carry_over_slots_to_new_session: true
 intents:
-- transfer_money:
+  - transfer_money:
     use_entities: []
-- inform:
-  use_entities: []
+- inform
 - pay_cc:
     use_entities: []
-- greet:
-  use_entities: []
-- goodbye:
-  use_entities: []
-- affirm:
-  use_entities: []
-- deny:
-  use_entities: []
-- thankyou:
-  use_entities: []
-- ask_transaction_charge:
-  use_entities: []
+- greet
+- goodbye
+- affirm
+- deny
+- thankyou
+- ask_transfer_charge
 - search_transactions:
     use_entities: []
-- check_balance:
-  use_entities: []
+- check_balance
+- check_earnings:
+    use_entities: []
 - fuel_my_entity:
     use_entities: []
 - check_earnings:
