--- a/domain.yml
+++ b/domain.yml
@@ -1,5 +1,5 @@
 session_config:
-  session_expiration_time: 0.0
+  session_expiration_time: 0
   carry_over_slots_to_new_session: true
 intents:
 - transfer_money:
@@ -26,7 +26,6 @@ intents:
 - fuel_my_entity:
     use_entities: []
 entities:
-- amount-of-money
 - ixo_entity_id
 - ixo_entity
 - ixo_agent
@@ -38,24 +37,15 @@ entities:
 - credit_card
 - payment_date
 - vendor_name
-- time
-- PERSON
 - number
 slots:
-  ixo_amount:
-    type: unfeaturized
-    initial_value: 1000
-  ixo_transaction_fee:
-    type: unfeaturized
-    initial_value: 10
-  ixo_currency_conversion:
-    type: unfeaturized
-    initial_value: 10
   PERSON:
     type: unfeaturized
   account_balance:
     type: unfeaturized
     initial_value: 1000
+  agent_id:
+    type: unfeaturized
   amount_of_money:
     type: unfeaturized
   amount_transferred:
@@ -63,48 +53,52 @@ slots:
     initial_value: 1000
   confirm:
     type: unfeaturized
-  to_wallet_address:
+  credit_card:
     type: unfeaturized
-    initial_value: "did:ixo:Lup7hzAUVJpJHG8rVTFZQJ"
-  from_wallet_balance_pre:
+  currency:
     type: unfeaturized
-    initial_value: 1000
-  from_wallet_balance_post:
+    initial_value: IXO
+  end_time:
     type: unfeaturized
-    initial_value: 0
   entity_id:
-   type: unfeaturized
-   initial_value: "did:ixo:Lup7hzAUVJpJHG8rVTFZQJ"
-  agent_id:
-   type: unfeaturized
-  transaction_fee:
-   type: unfeaturized
-   initial_value: 10 
-  fee_id:
     type: unfeaturized
+    initial_value: did:ixo:Lup7hzAUVJpJHG8rVTFZQJ
   fee_amount:
     type: unfeaturized
   fee_currency:
     type: unfeaturized
-    initial_value: "Euros"
-  fee_type:
-    type: unfeaturized
-  offer_description:
-    type: unfeaturized
-    initial_value: "12-months standard hosting"
+    initial_value: Euros
   fee_description:
+    type: unfeaturized
+  fee_id:
+    type: unfeaturized
+  fee_type:
     type: unfeaturized
   file_id:
     type: unfeaturized
-  credit_card:
+  from_wallet_balance_post:
     type: unfeaturized
-  end_time:
+    initial_value: 0
+  from_wallet_balance_pre:
     type: unfeaturized
+    initial_value: 1000
+  ixo_amount:
+    type: unfeaturized
+    initial_value: 1000
+  ixo_currency_conversion:
+    type: unfeaturized
+    initial_value: 10
+  ixo_transaction_fee:
+    type: unfeaturized
+    initial_value: 10
+  offer_description:
+    type: unfeaturized
+    initial_value: 12-months standard hosting
   payment_amount:
     type: unfeaturized
   payment_amount_type:
     type: unfeaturized
-    initial_value: ""
+    initial_value: ''
   requested_slot:
     type: unfeaturized
   search_type:
@@ -113,16 +107,21 @@ slots:
     type: unfeaturized
   time:
     type: unfeaturized
+  to_wallet_address:
+    type: unfeaturized
+    initial_value: did:ixo:Lup7hzAUVJpJHG8rVTFZQJ
+  transaction_fee:
+    type: unfeaturized
+    initial_value: 10
   vendor_name:
     type: unfeaturized
-  currency:
-    type: unfeaturized
-    initial_value: "IXO"
 responses:
   utter_project_entity_id:
-  - text: I understand that you would like to add IXO credits to fuel the fees for your project
+  - text: I understand that you would like to add IXO credits to fuel the fees for
+      your project
   utter_cell_entity_id:
-  - text: I understand that you would like to add IXO credits to fuel the fees for your cell node
+  - text: I understand that you would like to add IXO credits to fuel the fees for
+      your cell node
   utter_currency:
   - text: The currency of this transaction is {currency}
   utter_wallet_balance_pre:
@@ -132,24 +131,26 @@ responses:
   utter_fee_type:
   - text: The fee type for this transacton is {fee_type}
   utter_transaction_fee_ixo:
-  - text: You will be charged a standard transaction fee of {ixo_transaction_fee} IXO credits (included in the transaction amount).
+  - text: You will be charged a standard transaction fee of {ixo_transaction_fee}
+      IXO credits (included in the transaction amount).
   utter_fuel_credit_amount:
   - text: The suggested amount of credits to cover all fees is {ixo_amount} IXO
   utter_fuel_credit_refund_policy:
-  - text: You may choose to withdraw any remaining IXO credits at any point 
+  - text: You may choose to withdraw any remaining IXO credits at any point
   utter_ixo_currency_conversion:
   - text: The equivalent {currency} value of your credits will be approximately {ixo_currency_conversion}
   utter_fee_description_freehosting:
-  - text: If you add 1,000 or more IXO credits, you will get 12 months of standard data hosting included (fair use terms apply).
+  - text: If you add 1,000 or more IXO credits, you will get 12 months of standard
+      data hosting included (fair use terms apply).
   utter_adding_fuel:
   - text: Now carefully check your order details, then sign the transaction.
   utter_ask_confirm_hosting_offer:
-    - text: 'Would you like to accept the offer of {offer_description}?'
-      buttons:
-      - title: Yes
-        payload: /affirm_offer
-      - title: No thanks
-        payload: /deny_offer
+  - text: Would you like to accept the offer of {offer_description}?
+    buttons:
+    - title: Yes
+      payload: /affirm_offer
+    - title: No thanks
+      payload: /deny_offer
   utter_ask_fuel_entity_form_from_wallet_address:
   - text: Sending IXO Credits from this wallet address (which you control)
   utter_got_it:
@@ -157,14 +158,16 @@ responses:
   utter_ask_fuel_entity_form_to_wallet_address:
   - text: The wallet address to which the IXO credits will be sent
   utter_ask_fuel_entity_form_ixo_amount:
-  - text: Let's go ahead with adding {ixo_amount} IXO credits, or please enter a different amount
+  - text: Let's go ahead with adding {ixo_amount} IXO credits, or please enter a different
+      amount
   utter_ask_fuel_entity_form_confirm:
-  - text: 'So lets confirm that we are loading up {ixo_amount} IXO credits. You will still have the opportunity to review your order before submitting the transaction'
+  - text: So lets confirm that we are loading up {ixo_amount} IXO credits. You will
+      still have the opportunity to review your order before submitting the transaction
     buttons:
-      - title: Confirm
-        payload: /affirm
-      - title: Cancel
-        payload: /deny
+    - title: Confirm
+      payload: /affirm
+    - title: Cancel
+      payload: /deny
   utter_ask_transfer_form_amount_of_money:
   - text: How much money do you want to transfer?
   utter_ask_transfer_form_PERSON:
@@ -176,9 +179,10 @@ responses:
   utter_noworries:
   - text: You're welcome :)
   utter_transfer_complete:
-  - text: 'Successfully transferred {currency}{amount_of_money} to {PERSON}'
+  - text: Successfully transferred {currency}{amount_of_money} to {PERSON}
   utter_fuel_added:
-    - text: 'You have successfully fueled your {ixo_entity} with {ixo_amount}IXO credits to the value of {currency}{amount_of_money}.'
+  - text: You have successfully fueled your {ixo_entity} with {ixo_amount}IXO credits
+      to the value of {currency}{amount_of_money}.
   utter_transfer_charge:
   - text: You are entitled to six transfers within a statement cycle before being
       charged. For subsequent transfers you will be charged 10 per transaction.
@@ -204,18 +208,16 @@ responses:
   utter_no_transactdate:
   - text: Sorry, that's not a recognized time frame.
   utter_cc_pay_scheduled:
-  - text: 'Payment of {currency}{payment_amount}{payment_amount_type} towards your {credit_card}
-      account scheduled to be paid at {time}'
+  - text: Payment of {currency}{payment_amount}{payment_amount_type} towards your
+      {credit_card} account scheduled to be paid at {time}
   utter_searching_spend_transactions:
-  - text: Searching transactions{vendor_name} between {start_time}
-      and {end_time}...
+  - text: Searching transactions{vendor_name} between {start_time} and {end_time}...
   utter_found_spend_transactions:
-  - text: 'I found {numtransacts} transactions{vendor_name} totalling {currency}{total}'
+  - text: I found {numtransacts} transactions{vendor_name} totalling {currency}{total}
   utter_searching_deposit_transactions:
-  - text: Searching deposits made to your account between {start_time}
-      and {end_time}...
+  - text: Searching deposits made to your account between {start_time} and {end_time}...
   utter_found_deposit_transactions:
-  - text: 'I found {numtransacts} deposits made to your account totalling {currency}{total}'
+  - text: I found {numtransacts} deposits made to your account totalling {currency}{total}
   utter_ask_rephrase:
   - text: I didn't quite understand that. Can you rephrase?
   utter_ask_switch_goal:
@@ -233,15 +235,15 @@ responses:
   utter_default:
   - text: Sorry, I didn't get that. Could you rephrase?
   utter_ask_cc_payment_form_confirm:
-  - text: 'Would you like to schedule a payment of {currency}{payment_amount}{payment_amount_type}
-      towards your {credit_card} account for {time}?'
+  - text: Would you like to schedule a payment of {currency}{payment_amount}{payment_amount_type}
+      towards your {credit_card} account for {time}?
     buttons:
     - title: Yes
       payload: /affirm
     - title: No, cancel the transaction
       payload: /deny
   utter_ask_transfer_form_confirm:
-  - text: 'Would you like to transfer {currency}{amount_of_money} to {PERSON}?'
+  - text: Would you like to transfer {currency}{amount_of_money} to {PERSON}?
     buttons:
     - title: Yes
       payload: /affirm
@@ -252,11 +254,65 @@ responses:
   utter_cc_pay_cancelled:
   - text: Credit card account payment cancelled
   utter_account_balance:
-  - text: "Your balance is {currency}{init_account_balance}"
+  - text: Your balance is {currency}{init_account_balance}
   utter_changed_account_balance:
-  - text: "Your balance was {currency}{init_account_balance} and is now {currency}{account_balance} after the transfer"
+  - text: Your balance was {currency}{init_account_balance} and is now {currency}{account_balance}
+      after the transfer
 actions:
-- action_account_balance
+- utter_project_entity_id
+- utter_cell_entity_id
+- utter_currency
+- utter_wallet_balance_pre
+- utter_wallet_balance_post
+- utter_fee_type
+- utter_transaction_fee_ixo
+- utter_fuel_credit_amount
+- utter_fuel_credit_refund_policy
+- utter_ixo_currency_conversion
+- utter_fee_description_freehosting
+- utter_adding_fuel
+- utter_ask_confirm_hosting_offer
+- utter_ask_fuel_entity_form_from_wallet_address
+- utter_got_it
+- utter_ask_fuel_entity_form_to_wallet_address
+- utter_ask_fuel_entity_form_ixo_amount
+- utter_ask_fuel_entity_form_confirm
+- utter_ask_transfer_form_amount_of_money
+- utter_ask_transfer_form_PERSON
+- utter_goodbye
+- utter_greet
+- utter_noworries
+- utter_transfer_complete
+- utter_fuel_added
+- utter_transfer_charge
+- utter_ask_cc_payment_form_payment_amount
+- utter_ask_cc_payment_form_credit_card
+- utter_ask_cc_payment_form_time
+- utter_ask_transact_search_form_vendor_name
+- utter_ask_transact_search_form_time
+- utter_no_payment_amount
+- utter_no_paymentdate
+- utter_no_creditcard
+- utter_no_vendor_name
+- utter_no_transactdate
+- utter_cc_pay_scheduled
+- utter_searching_spend_transactions
+- utter_found_spend_transactions
+- utter_searching_deposit_transactions
+- utter_found_deposit_transactions
+- utter_ask_rephrase
+- utter_ask_switch_goal
+- utter_ask_back_to_transact
+- utter_ask_back_to_transfer
+- utter_ok
+- utter_ask_continue
+- utter_default
+- utter_ask_cc_payment_form_confirm
+- utter_ask_transfer_form_confirm
+- utter_transfer_cancelled
+- utter_cc_pay_cancelled
+- utter_account_balance
+- utter_changed_account_balance
 forms:
 - cc_payment_form
 - transfer_form
