--- a/domain.yml
+++ b/domain.yml
@@ -88,7 +88,7 @@ slots:
   ixo_currency_conversion:
     type: unfeaturized
     initial_value: 10
-  ixo_transaction_fee:
+  ixo_gas_fee:
     type: unfeaturized
     initial_value: 10
   offer_description:
@@ -113,6 +113,9 @@ slots:
   transaction_fee:
     type: unfeaturized
     initial_value: 10
+  transaction_fee_currency:
+    type: unfeaturized
+    initial_value: "IXO"
   vendor_name:
     type: unfeaturized
 responses:
@@ -125,29 +128,29 @@ responses:
   utter_currency:
   - text: The currency of this transaction is {currency}
   utter_add_fuel:
-  - text: Let's go ahead with adding some IXO credits to fuel your {ixo_entity}
+  - text: Let's go ahead with adding some IXO credits to add fuel
   utter_wallet_balance_pre:
-  - text: Your current IXO Credits balance in this wallet is {from_wallet_balance_pre}
+  - text: Your current IXO Credits balance in this wallet is from_wallet_balance_pre
   utter_wallet_balance_post:
-  - text: The balance in your wallet after this transaction will be { from_wallet_balance_post}
+  - text: The balance in your wallet after this transaction will be from_wallet_balance_post
   utter_fee_type:
-  - text: The fee type for this transacton is {fee_type}
+  - text: The fee type for this transacton is fee_type
   utter_transaction_fee_ixo:
-  - text: You will be charged a standard transaction fee of {ixo_transaction_fee}
+  - text: You will be charged a standard transaction fee of {ixo_gas_fee}
       IXO credits (included in the transaction amount).
   utter_fuel_credit_amount:
-  - text: The suggested amount of credits to cover all fees is {ixo_amount} IXO
+  - text: The suggested amount of credits to cover all fees is ixo_amount IXO
   utter_fuel_credit_refund_policy:
   - text: You may choose to withdraw any remaining IXO credits at any point
   utter_ixo_currency_conversion:
-  - text: The equivalent {currency} value of your credits will be approximately {ixo_currency_conversion}
+  - text: The equivalent _currency value of your credits will be approximately {ixo_currency_conversion}
   utter_fee_description_freehosting:
   - text: If you add 1,000 or more IXO credits, you will get 12 months of standard
       data hosting included (fair use terms apply).
   utter_adding_fuel:
   - text: Now carefully check your order details, then sign the transaction.
   utter_ask_confirm_hosting_offer:
-  - text: Would you like to accept the offer of {offer_description}?
+  - text: Would you like to accept the offer of offer_description?
     buttons:
     - title: Yes
       payload: /affirm_offer
@@ -183,8 +186,8 @@ responses:
   utter_transfer_complete:
   - text: Successfully transferred {currency}{amount_of_money} to {PERSON}
   utter_fuel_added:
-  - text: You have successfully fueled your {ixo_entity} with {ixo_amount}IXO credits
-      to the value of {currency}{amount_of_money}.
+  - text: You have successfully fueled your ixo_entity with {ixo_amount} IXO credits
+      to the value of _currency amount_of_money.
   utter_transfer_charge:
   - text: You are entitled to six transfers within a statement cycle before being
       charged. For subsequent transfers you will be charged 10 per transaction.
@@ -315,6 +318,7 @@ actions:
 - utter_cc_pay_cancelled
 - utter_account_balance
 - utter_changed_account_balance
+- utter_ask_fuel_entity_form
 forms:
 - cc_payment_form
 - transfer_form
